--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQFalsePositive.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQFalsePositive.xib
@@ -48,10 +48,9 @@
                     </state>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="weP-KY-KeG" customClass="SJAddView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="55" y="224" width="320" height="100"/>
+                    <rect key="frame" x="0.0" y="224" width="375" height="100"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="320" id="MnJ-3u-tvY"/>
                         <constraint firstAttribute="height" constant="100" id="bCs-Lo-VTx"/>
                     </constraints>
                 </view>
@@ -116,6 +115,7 @@
                 <constraint firstAttribute="trailing" secondItem="weP-KY-KeG" secondAttribute="trailing" id="eNa-8o-RP5"/>
                 <constraint firstItem="NMs-Ff-9kQ" firstAttribute="leading" secondItem="w6h-lN-nfc" secondAttribute="trailing" constant="5" id="gtH-jK-Jwn"/>
                 <constraint firstItem="mzg-GI-nQC" firstAttribute="centerX" secondItem="7cQ-dS-IB8" secondAttribute="centerX" id="h9t-87-FZj"/>
+                <constraint firstItem="weP-KY-KeG" firstAttribute="leading" secondItem="7cQ-dS-IB8" secondAttribute="leading" id="ioG-2c-8in"/>
                 <constraint firstItem="Pkp-rJ-HWx" firstAttribute="top" secondItem="EIF-9M-zfZ" secondAttribute="bottom" constant="40" id="nc2-Lz-z8Y"/>
                 <constraint firstItem="LYL-nJ-cgt" firstAttribute="centerY" secondItem="Pkp-rJ-HWx" secondAttribute="centerY" id="ubd-Jv-eQk"/>
                 <constraint firstItem="LYL-nJ-cgt" firstAttribute="leading" secondItem="Pkp-rJ-HWx" secondAttribute="trailing" constant="15" id="vRJ-6C-K35"/>
